# soundyrust

./: Cargo.toml  README.md
assets/: fray 2.mid  octave.mid
examples/: live_playing.rs  midi_octave.rs  midi_with_multiple_channels.rs  multiple_tracks.rs  queued_tracks.rs  synced_info.rs  with_channel_patch.rs
src/: lib.rs  main.rs  midi.rs  notes.rs  source.rs
