[package]
name = "soundyrust"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/jwright159/bevy.git", branch = "jadys-awesome-hax" }
augmented-midi = "1.8.0"
helgoboss-midi = "0.4.0"
itertools = "0.13.0"
rustysynth = "1.3.2"
rodio = { git = "https://github.com/jwright159/rodio.git", branch = "jadys-awesome-hax" }

[lib]
name = "soundyrust"
path = "src/lib.rs"
